RESOLVED FIXED83709
[mac] Suppress deprecation warning for GlobalToLocal in the carbon parts of the test plugin.
https://bugs.webkit.org/show_bug.cgi?id=83709
Summary [mac] Suppress deprecation warning for GlobalToLocal in the carbon parts of t...
Nico Weber
Reported 2012-04-11 12:03:39 PDT
[mac] Suppress deprecation warning for GlobalToLocal in the carbon parts of the test plugin.
Attachments
Patch (1.92 KB, patch)
2012-04-11 12:05 PDT, Nico Weber
no flags
Patch (2.01 KB, patch)
2012-04-11 12:10 PDT, Nico Weber
no flags
Nico Weber
Comment 1 2012-04-11 12:05:36 PDT
Nico Weber
Comment 2 2012-04-11 12:10:46 PDT
WebKit Review Bot
Comment 3 2012-04-11 13:17:08 PDT
Comment on attachment 136722 [details] Patch Clearing flags on attachment: 136722 Committed r113901: <http://trac.webkit.org/changeset/113901>
WebKit Review Bot
Comment 4 2012-04-11 13:17:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.