[mac] Suppress deprecation warning for GlobalToLocal in the carbon parts of the test plugin. https://bugs.webkit.org/show_bug.cgi?id=83709

Reviewed by Anders Carlsson.

* DumpRenderTree/TestNetscapePlugIn/main.cpp:
(handleEventCarbon):


Canonical link: https://commits.webkit.org/101198@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113901 268f45cc-cd09-0410-ab3c-d52691b4dbfc